# querymate

./: Cargo.toml  config.toml  config.toml.blank
src/: lib.rs  main.rs
src/ai/: claude.rs  mod.rs
src/postgres/: mod.rs
