[package]
name = "querymate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
  
[dependencies]
tokio-macros = "2.4.0"
async-trait = "0.1.83"
config = { version = "0.14.0", features = ["toml"] }
config-file = "0.2.3"
postgres = "0.19.9"
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0.128"
sqlx = {version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"]}
tokio = { version = "1.40.0", features = ["full"] }
